# Unified-Retreival-Engine

./: .gitignore  main.py  pyproject.toml
app/conf/: config.yaml
app/dto/: config.py  document_schema.py  router_schema.py
app/services/: docling_service.py  router_service.py
app/utils/: config_utils.py  logging.py
